; ModuleID = '/home/carl/AnghaBench/linux/drivers/rapidio/extr_rio-scan.c_rio_get_host_deviceid_lock.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/rapidio/extr_rio-scan.c_rio_get_host_deviceid_lock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rio_mport = type { i32 }

@RIO_HOST_DID_LOCK_CSR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.rio_mport*, i32)* @rio_get_host_deviceid_lock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rio_get_host_deviceid_lock(%struct.rio_mport* %0, i32 %1) #0 {
  %3 = alloca %struct.rio_mport*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.rio_mport* %0, %struct.rio_mport** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.rio_mport*, %struct.rio_mport** %3, align 8
  %7 = load %struct.rio_mport*, %struct.rio_mport** %3, align 8
  %8 = getelementptr inbounds %struct.rio_mport, %struct.rio_mport* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @RIO_ANY_DESTID(i32 %9)
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* @RIO_HOST_DID_LOCK_CSR, align 4
  %13 = call i32 @rio_mport_read_config_32(%struct.rio_mport* %6, i32 %10, i32 %11, i32 %12, i32* %5)
  %14 = load i32, i32* %5, align 4
  %15 = and i32 %14, 65535
  ret i32 %15
}

declare dso_local i32 @rio_mport_read_config_32(%struct.rio_mport*, i32, i32, i32, i32*) #1

declare dso_local i32 @RIO_ANY_DESTID(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
